(API break) refactoring: unification, simplification